@startuml
title UC010 - Specify a new vaccine type




class VaccineTech{
    +Name: String
    +Description: String
    +ID: int [PK]
    +ID Pandemic: int [FK]

}

class Brand {
    +Name: String
    +ID: int [PK]
}

class Administrator {
    +ID: int [PK]
}

class Vaccine {
    +ID: Int [PK]
    +Name: String
    +Type: ID VaccineType [FK]
    +ID Brand : INT [FK]
    +ID Administrator: Int [FK]
}

class VaccineType {
     +ID: Int [pk]
     +Name: String
     +Brand: String [FK]
     +VaccineTech ID : Int [FK]
}

class VaccinationCenter {
    +ID: Int [PK]
    +Name: String
    +Location: String
    +ContactInformation: String
    +OperatingHours: String
    +Pandemic ID: INT [FK]
}

class Pandemic {
    +ID: Int [PK]
    +Name: String
}

class Employee {
    +Name: String
    +JobDescription: String
    +SNSNumber: String [PK]
    +ID: Int [PK]
}

class Receptionist {
    +Employee ID: INT [FK]
    +Role: String
}

class SNSUser {
    +Name: String
    +BirthDate: Date
    +Sex: String
    +PostalAddress: String
    +PhoneNumber: String
    +EmailAddress: String
    +CitizenCardNumber: String [PK3]
    +SNSUserNumber: String [PK2]
    +ID: Int [PK1]
}

class WaitingRoom{
    +SNSUser ID's: int [FK]
}

class VaccinationHub{
    +SNSUser ID's: int [FK]
    +Nurse ID: Int [FK]
}

class Nurse{
     +Employee ID: INT [FK]
     +Role: String
}

' Relationships
VaccinationCenter "1" -- "1" VaccinationHub: >
VaccinationCenter "1" -- "1" WaitingRoom: >
Nurse "*" -- "1" VaccinationHub :  >
Nurse "*" -- "1" Employee :  <
Nurse "*" -- "1" WaitingRoom :  <
SNSUser "*" -- "1" VaccinationHub :  >
SNSUser "*" -- "1" WaitingRoom :  >
Receptionist "*" -- "1" Employee :  <
Receptionist "1" -- "*" SNSUser :  >
Administrator "1" -- "  *" Employee : >
Employee "1" -- "*" VaccinationCenter :  >
Administrator "1" -- "*" VaccinationCenter :  >
VaccineTech "1" -- "1" Pandemic :  <
VaccinationCenter "1" -- "1" Pandemic :  <
Administrator "1" -- "*" Vaccine :  >
Vaccine "*" -- "1" Brand :  <
VaccineTech "1   "-"    *" VaccineType : >
VaccineType "1   "-"    *"Vaccine : >

@enduml